[gd_scene load_steps=18 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/JUMP_START.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/RUN (1)0000.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/RUN (1)0001.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/RUN (1)0002.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/RUN (1)0003.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/RUN (1)0004.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/RUN (1)0005.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/JUMP_END.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/IDLE-ANIMATION-_FINISH0000.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/IDLE-ANIMATION-_FINISH0001.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/IDLE-ANIMATION-_FINISH0002.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/IDLE-ANIMATION-_FINISH0003.png" type="Texture" id=13]
[ext_resource path="res://PlayerHitBox.gd" type="Script" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 38.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.83
height = 37.658

[node name="Player " type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -5, -3 )
frames = SubResource( 1 )
animation = "Idle"
offset = Vector2( 5, 10 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="RRayCast2D" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, 11 )

[node name="LRayCast2D" type="RayCast2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.5708
scale = Vector2( 3, 1 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="HitBox" type="Area2D" parent="." groups=[
"player",
]]
script = ExtResource( 14 )

[node name="HitBox" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( 0.170013, 7.659 )
shape = SubResource( 3 )
[connection signal="is_dead" from="HitBox" to="." method="_on_HitBox_is_dead"]
